# qsimplex

./: CMakeLists.txt
src/: main.cc
